--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
 
   <body>
     <header class="header-style">
-      <div class="header-container">
+      <div class="header-container container">
         <div class="header-logo">
           <a class="logo" href="./index.html"
             ><span class="web-text">Web</span>Studio</a
@@ -72,12 +72,20 @@
           <ul class="project-list">
             <li class="item">
               <figure class="img-frame">
-                <img
-                  src="images/website/technocrack.jpg"
-                  alt="website"
-                  width="370"
-                  height="294"
-                />
+                <div class="box">
+                  <img
+                    src="images/website/technocrack.jpg"
+                    alt="website"
+                    width="370"
+                    height="294"
+                  />
+                  <span class="overlay"
+                    >Technocrack jest popularną platformą wykorzystywaną do
+                    rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                    platformę do celów szpiegowskich i ataków na
+                    niezabezpieczone serwery konkurencji</span
+                  >
+                </div>
                 <figcaption class="projects">
                   <p class="project-name">Technocrack</p>
                   <p class="project-category">Strona internetowa</p>
@@ -87,12 +95,15 @@
 
             <li class="item">
               <figure class="img-frame">
-                <img
-                  src="images/design/new-orlean-vs-golden-star.jpg"
-                  alt="basketball players"
-                  width="370"
-                  height="294"
-                />
+                <div class="box">
+                  <img
+                    src="images/design/new-orlean-vs-golden-star.jpg"
+                    alt="basketball players"
+                    width="370"
+                    height="294"
+                  />
+                  <span class="overlay"></span>
+                </div>
                 <figcaption class="projects">
                   <p class="project-name">Grafika New Orlean vs Golden Star</p>
                   <p class="project-category">Dizajn</p>
@@ -102,12 +113,15 @@
 
             <li class="item">
               <figure class="img-frame">
-                <img
-                  src="images/apps/restaurant-seafood.jpg"
-                  alt="Fish"
-                  width="370"
-                  height="294"
-                />
+                <div class="box">
+                  <img
+                    src="images/apps/restaurant-seafood.jpg"
+                    alt="Fish"
+                    width="370"
+                    height="294"
+                  />
+                  <span class="overlay"></span>
+                </div>
                 <figcaption class="projects">
                   <p class="project-name">Restauracja Seafood</p>
                   <p class="project-category">Aplikacja</p>
@@ -117,12 +131,15 @@
 
             <li class="item">
               <figure class="img-frame">
-                <img
-                  src="images/marketing/project-prime.jpg"
-                  alt="Headphones"
-                  width="370"
-                  height="294"
-                />
+                <div class="box">
+                  <img
+                    src="images/marketing/project-prime.jpg"
+                    alt="Headphones"
+                    width="370"
+                    height="294"
+                  />
+                  <span class="overlay"></span>
+                </div>
                 <figcaption class="projects">
                   <p class="project-name">Project Prime</p>
                   <p class="project-category">Marketing</p>
@@ -132,12 +149,15 @@
 
             <li class="item">
               <figure class="img-frame">
-                <img
-                  src="images/apps/projekt-boxes.jpg"
-                  alt="Cartoons"
-                  width="370"
-                  height="294"
-                />
+                <div class="box">
+                  <img
+                    src="images/apps/projekt-boxes.jpg"
+                    alt="Cartoons"
+                    width="370"
+                    height="294"
+                  />
+                  <span class="overlay"></span>
+                </div>
                 <figcaption class="projects">
                   <p class="project-name">Projekt Boxes</p>
                   <p class="project-category">Aplikacja</p>
@@ -147,12 +167,15 @@
 
             <li class="item">
               <figure class="img-frame">
-                <img
-                  src="images/website/inspiration-has-no-borders.jpg"
-                  alt="Screen"
-                  width="370"
-                  height="294"
-                />
+                <div class="box">
+                  <img
+                    src="images/website/inspiration-has-no-borders.jpg"
+                    alt="Screen"
+                    width="370"
+                    height="294"
+                  />
+                  <span class="overlay"></span>
+                </div>
                 <figcaption class="projects">
                   <p class="project-name">Inspiration has no Borders</p>
                   <p class="project-category">Strona internetowa</p>
@@ -162,12 +185,15 @@
 
             <li class="item">
               <figure class="img-frame">
-                <img
-                  src="images/design/magazine-limited-edition.jpg"
-                  alt="Newspaper"
-                  width="370"
-                  height="294"
-                />
+                <div class="box">
+                  <img
+                    src="images/design/magazine-limited-edition.jpg"
+                    alt="Newspaper"
+                    width="370"
+                    height="294"
+                  />
+                  <span class="overlay"></span>
+                </div>
                 <figcaption class="projects">
                   <p class="project-name">Magazyn Limited Edition</p>
                   <p class="project-category">Dizajn</p>
@@ -177,12 +203,15 @@
 
             <li class="item">
               <figure class="img-frame">
-                <img
-                  src="images/marketing/project-lab.jpg"
-                  alt="Label"
-                  width="370"
-                  height="294"
-                />
+                <div class="box">
+                  <img
+                    src="images/marketing/project-lab.jpg"
+                    alt="Label"
+                    width="370"
+                    height="294"
+                  />
+                  <span class="overlay"></span>
+                </div>
                 <figcaption class="projects">
                   <p class="project-name">Projekt LAB</p>
                   <p class="project-category">Marketing</p>
@@ -192,12 +221,15 @@
 
             <li class="item">
               <figure class="img-frame">
-                <img
-                  src="images/apps/growing-business.jpg"
-                  alt="Laptop"
-                  width="370"
-                  height="294"
-                />
+                <div class="box">
+                  <img
+                    src="images/apps/growing-business.jpg"
+                    alt="Laptop"
+                    width="370"
+                    height="294"
+                  />
+                  <span class="overlay"></span>
+                </div>
                 <figcaption class="projects">
                   <p class="project-name">Growing Business</p>
                   <p class="project-category">Aplikacja</p>
