--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <body>
     <header class="header-style">
-      <div class="header-container">
+      <div class="header-container container">
         <div class="header-logo">
           <a class="logo" href="./index.html"
             ><span class="web-text">Web</span>Studio</a
