--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,9 @@
               <a href="./index.html" class="web-navigation">Agencja</a>
             </li>
             <li>
-              <a href="./portfolio.html" class="web-navigation">Portfolio</a>
+              <a href="./portfolio.html" class="web-navigation is-active"
+                >Portfolio</a
+              >
             </li>
             <li><a href="#" class="web-navigation">Kontakty</a></li>
           </ul>
