--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
         <nav class="nav-menu">
           <ul class="list">
             <li>
-              <a href="./index.html" class="web-navigation">Agencja</a>
+              <a href="./index.html" class="web-navigation is-active"
+                >Agencja</a
+              >
             </li>
             <li>
               <a href="./portfolio.html" class="web-navigation">Portfolio</a>
