--- a/portfolio.html
+++ b/portfolio.html
@@ -85,8 +85,8 @@
                     >Technocrack jest popularną platformą wykorzystywaną do
                     rozpowszechniania koronawirusa. Firmy wykorzystują tę
                     platformę do celów szpiegowskich i ataków na
-                    niezabezpieczone serwery konkurencji</span
-                  >
+                    niezabezpieczone serwery konkurencji
+                  </span>
                 </div>
                 <figcaption class="projects">
                   <p class="project-name">Technocrack</p>
@@ -104,11 +104,20 @@
                     width="370"
                     height="294"
                   />
-                  <span class="overlay"></span>
+                  <span class="overlay"
+                    >Technocrack jest popularną platformą wykorzystywaną do
+                    rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                    platformę do celów szpiegowskich i ataków na
+                    niezabezpieczone serwery konkurencji</span
+                  >
                 </div>
-                <figcaption class="projects">
-                  <p class="project-name">Grafika New Orlean vs Golden Star</p>
-                  <p class="project-category">Dizajn</p>
+                <figcaption>
+                  <div class="projects">
+                    <p class="project-name">
+                      Grafika New Orlean vs Golden Star
+                    </p>
+                    <p class="project-category">Dizajn</p>
+                  </div>
                 </figcaption>
               </figure>
             </li>
@@ -122,7 +131,12 @@
                     width="370"
                     height="294"
                   />
-                  <span class="overlay"></span>
+                  <span class="overlay"
+                    >Technocrack jest popularną platformą wykorzystywaną do
+                    rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                    platformę do celów szpiegowskich i ataków na
+                    niezabezpieczone serwery konkurencji</span
+                  >
                 </div>
                 <figcaption class="projects">
                   <p class="project-name">Restauracja Seafood</p>
@@ -140,7 +154,12 @@
                     width="370"
                     height="294"
                   />
-                  <span class="overlay"></span>
+                  <span class="overlay"
+                    >Technocrack jest popularną platformą wykorzystywaną do
+                    rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                    platformę do celów szpiegowskich i ataków na
+                    niezabezpieczone serwery konkurencji</span
+                  >
                 </div>
                 <figcaption class="projects">
                   <p class="project-name">Project Prime</p>
@@ -158,7 +177,12 @@
                     width="370"
                     height="294"
                   />
-                  <span class="overlay"></span>
+                  <span class="overlay">
+                    Technocrack jest popularną platformą wykorzystywaną do
+                    rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                    platformę do celów szpiegowskich i ataków na
+                    niezabezpieczone serwery konkurencji.
+                  </span>
                 </div>
                 <figcaption class="projects">
                   <p class="project-name">Projekt Boxes</p>
@@ -176,7 +200,12 @@
                     width="370"
                     height="294"
                   />
-                  <span class="overlay"></span>
+                  <span class="overlay"
+                    >Technocrack jest popularną platformą wykorzystywaną do
+                    rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                    platformę do celów szpiegowskich i ataków na
+                    niezabezpieczone serwery konku</span
+                  >
                 </div>
                 <figcaption class="projects">
                   <p class="project-name">Inspiration has no Borders</p>
@@ -194,7 +223,12 @@
                     width="370"
                     height="294"
                   />
-                  <span class="overlay"></span>
+                  <span class="overlay">
+                    Technocrack jest popularną platformą wykorzystywaną do
+                    rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                    platformę do celów szpiegowskich i ataków na
+                    niezabezpieczone serwery konkurencji
+                  </span>
                 </div>
                 <figcaption class="projects">
                   <p class="project-name">Magazyn Limited Edition</p>
@@ -212,7 +246,12 @@
                     width="370"
                     height="294"
                   />
-                  <span class="overlay"></span>
+                  <span class="overlay"
+                    >Technocrack jest popularną platformą wykorzystywaną do
+                    rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                    platformę do celów szpiegowskich i ataków na
+                    niezabezpieczone serwery konkurencji</span
+                  >
                 </div>
                 <figcaption class="projects">
                   <p class="project-name">Projekt LAB</p>
@@ -230,7 +269,12 @@
                     width="370"
                     height="294"
                   />
-                  <span class="overlay"></span>
+                  <span class="overlay"
+                    >Technocrack jest popularną platformą wykorzystywaną do
+                    rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                    platformę do celów szpiegowskich i ataków na
+                    niezabezpieczone serwery konkurencji</span
+                  >
                 </div>
                 <figcaption class="projects">
                   <p class="project-name">Growing Business</p>
