--- a/index.html
+++ b/index.html
@@ -483,9 +483,8 @@
               >
             </p>
             <p class="footer-contact-phone">
-              <a href="tel:+48111111111" class="footer-phone"
-                >+48 111 111 111</a
-              >
+              <a href="tel:+48111111111" class="footer-phone">+48 111 111 111</a
+              >f
             </p>
           </li>
           <li class="join-us">
