--- a/index.html
+++ b/index.html
@@ -525,7 +525,9 @@
     </footer>
     <div class="modal is-hidden" data-modal>
       <div class="window">
-        <button type="button" class="close-btn" data-modal-close>x</button>
+        <button type="button" class="close-btn closing" data-modal-close>
+          x
+        </button>
       </div>
     </div>
 
