--- a/index.html
+++ b/index.html
@@ -483,8 +483,9 @@
               >
             </p>
             <p class="footer-contact-phone">
-              <a href="tel:+48111111111" class="footer-phone">+48 111 111 111</a
-              >f
+              <a href="tel:+48111111111" class="footer-phone"
+                >+48 111 111 111</a
+              >
             </p>
           </li>
           <li class="join-us">
